--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
